// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RoleItems /> render() should render correctly 1`] = `
<div>
  <WithStyles(TableRow)>
    <WithStyles(TableCell)
      classes={Object {}}
    >
      <Component
        breakWord={false}
        id={0}
        variant="stringOnly"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
        isEllipsis={true}
        variant="VIEW_MODE_COPY"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      centeredText={true}
      padding="halfLeftRight"
    >
      <Component
        changeRole={[Function]}
        id={0}
        variant="textOnly"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell) />
    <WithStyles(UGDialog)
      cancelFunc={[Function]}
      confirmFunc={[Function]}
      disabled={false}
      headlineText=""
      headlineTitle=""
      open={false}
      requestType=""
      template=""
      type=""
      value={null}
    />
  </WithStyles(TableRow)>
</div>
`;

exports[`<RoleItems /> render() should render correctly when editable 1`] = `
<div>
  <WithStyles(TableRow)>
    <WithStyles(TableCell)
      classes={Object {}}
    >
      <Component
        breakWord={false}
        id={0}
        variant="stringOnly"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
        isEllipsis={true}
        variant="VIEW_MODE_COPY"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      centeredText={true}
      padding="halfLeftRight"
    >
      <Component
        changeRole={[Function]}
        id={0}
        variant="textField"
      />
    </WithStyles(TableCell)>
    <WithStyles(ActionsCell)
      active={false}
      id={0}
      onActivate={[Function]}
      onDeactivate={[Function]}
      onDeleteItem={[Function]}
    />
    <WithStyles(UGDialog)
      cancelFunc={[Function]}
      confirmFunc={[Function]}
      disabled={false}
      headlineText=""
      headlineTitle=""
      open={false}
      requestType=""
      template=""
      type=""
      value={null}
    />
  </WithStyles(TableRow)>
</div>
`;

exports[`<RoleItems /> render() should render read-only correctly not owner or user 1`] = `
<div>
  <WithStyles(TableRow)>
    <WithStyles(TableCell)
      classes={Object {}}
    >
      <Component
        breakWord={false}
        id={1}
        variant="stringOnly"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={1}
        isEllipsis={true}
        variant="VIEW_MODE_COPY"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={1}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={1}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={1}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      centeredText={true}
      padding="halfLeftRight"
    >
      <Component
        changeRole={[Function]}
        id={1}
        variant="textOnly"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell) />
    <WithStyles(UGDialog)
      cancelFunc={[Function]}
      confirmFunc={[Function]}
      disabled={false}
      headlineText=""
      headlineTitle=""
      open={false}
      requestType=""
      template=""
      type=""
      value={null}
    />
  </WithStyles(TableRow)>
</div>
`;

exports[`<RoleItems /> render() should render read-only role===OWNER correctly 1`] = `
<div>
  <WithStyles(TableRow)>
    <WithStyles(TableCell)
      classes={Object {}}
    >
      <Component
        breakWord={false}
        id={1}
        variant="stringOnly"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={1}
        isEllipsis={true}
        variant="VIEW_MODE_COPY"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={1}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={1}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={1}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      centeredText={true}
      padding="halfLeftRight"
    >
      <Component
        changeRole={[Function]}
        id={1}
        variant="showAdmin"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell) />
    <WithStyles(UGDialog)
      cancelFunc={[Function]}
      confirmFunc={[Function]}
      disabled={false}
      headlineText=""
      headlineTitle=""
      open={false}
      requestType=""
      template=""
      type=""
      value={null}
    />
  </WithStyles(TableRow)>
</div>
`;

exports[`<RoleItems /> render() should render read-only user==me correctly 1`] = `
<div>
  <WithStyles(TableRow)>
    <WithStyles(TableCell)
      classes={Object {}}
    >
      <Component
        breakWord={false}
        id={0}
        variant="stringOnly"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
        isEllipsis={true}
        variant="VIEW_MODE_COPY"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <Component
        id={0}
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      centeredText={true}
      padding="halfLeftRight"
    >
      <Component
        changeRole={[Function]}
        id={0}
        variant="textOnly"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell) />
    <WithStyles(UGDialog)
      cancelFunc={[Function]}
      confirmFunc={[Function]}
      disabled={false}
      headlineText=""
      headlineTitle=""
      open={false}
      requestType=""
      template=""
      type=""
      value={null}
    />
  </WithStyles(TableRow)>
</div>
`;

exports[`<RoleItems /> renderRows() should render renderRows correctly 1`] = `
<div>
  <WithStyles(TableRow)>
    <WithStyles(TableCell)
      padding="halfLeftRight"
    >
      <WithStyles(GridContainer)
        direction="column"
        justify="flex-start"
        spacing={0}
      >
        <WithStyles(GridItem)>
          <WithStyles(GridContainer)
            direction="row"
          >
            <WithStyles(GridItem)>
              <Component
                breakWord={false}
                id={0}
                isTooltip={true}
                variant="stringOnly"
              />
            </WithStyles(GridItem)>
            <WithStyles(GridItem)>
              <Component
                id={0}
              />
            </WithStyles(GridItem)>
          </WithStyles(GridContainer)>
        </WithStyles(GridItem)>
        <WithStyles(GridItem)>
          <Component
            id={0}
            isEllipsis={true}
            isTooltip={true}
            variant="VIEW_MODE_COPY"
          />
        </WithStyles(GridItem)>
        <WithStyles(GridItem)>
          <Component
            id={0}
            isTableMobile={true}
          />
        </WithStyles(GridItem)>
        <WithStyles(GridItem)>
          <Component
            id={0}
            isTableMobile={true}
          />
        </WithStyles(GridItem)>
      </WithStyles(GridContainer)>
    </WithStyles(TableCell)>
    <WithStyles(TableCell)
      centeredText={true}
      padding="halfLeftRight"
    >
      <Component
        changeRole={[Function]}
        id={0}
        variant="textOnly"
      />
    </WithStyles(TableCell)>
    <WithStyles(TableCell) />
    <WithStyles(UGDialog)
      cancelFunc={[Function]}
      confirmFunc={[Function]}
      disabled={false}
      headlineText=""
      headlineTitle=""
      open={false}
      requestType=""
      template=""
      type=""
      value={null}
    />
  </WithStyles(TableRow)>
</div>
`;
